--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 						</ul>
 					</div>
 
-				<!-- Header -->/home/_mupherty4/Downloads/tor-browser/start-tor-browser.desktop
+				<!-- Header -->/
+				<!-- home/_mupherty4/Downloads/tor-browser/start-tor-browser.desktop -->
 					<header id="header">
 						<a href="index.html" class="logo">Profile</a>
 					</header>
